testsuite/tests/indexed-types/should_fail/T4254b.stderr

T4254b.hs:10:10: error:
    • Couldn't match type ‘b’ with ‘Bool’
        arising from a functional dependency between constraints:
          ‘FD Int Bool’
            arising from a type ambiguity check for
            the type signature for ‘fails’ at T4254b.hs:10:10-48
          ‘FD Int b’
            arising from the type signature for:
                           fails :: forall a b.
                                    (a ~ Int, FD a b) =>
                                    a -> Bool at T4254b.hs:10:10-48
      ‘b’ is a rigid type variable bound by
        the type signature for:
          fails :: forall a b. (a ~ Int, FD a b) => a -> Bool
        at T4254b.hs:10:10-48
    • In the ambiguity check for ‘fails’
      To defer the ambiguity check to use sites, enable AllowAmbiguousTypes
      In the type signature:
        fails :: forall a b. (a ~ Int, FD a b) => a -> Bool
